--- a/src/app/features/movies/recent-movies/recent-movies.component.html
+++ b/src/app/features/movies/recent-movies/recent-movies.component.html
@@ -1,34 +1,20 @@
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false" >
   <div class="carousel-indicators" >
-    <button *ngFor="let movie of recentMovies" type="button" data-bs-target="#carouselExampleCaptions" value="{{movie.id}}" aria-label="Slide 1">{{movie.id}}</button>
+    <button *ngFor="let movie of recentMovies; let pos = index" type="button"
+        data-bs-target="#carouselExampleCaptions"
+        attr.data-bs-slide-to="{{pos}}"
+        [ngClass]="pos == 0 ? 'active': ''"
+        aria-current="true"
+        attr.aria-label="Slide {{pos + 1}}">
+      </button>
   </div>
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://via.placeholder.com/1980x500" class="d-block w-100" alt="...">
+    <div *ngFor="let movie of recentMovies; let pos=index"
+      [ngClass]="pos == 0 ? 'carousel-item active': 'carousel-item'">
+      <img [src]="movie.url" class="d-block w-100" style="height: 350px" [alt]="movie.name">
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="https://via.placeholder.com/1980x500" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="https://via.placeholder.com/1980x500" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="https://via.placeholder.com/1980x500" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Fourth slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5>{{ movie.name }}</h5>
+        <p>{{ movie.description }}</p>
       </div>
     </div>
   </div>
