Se implementa componente detalle

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,9 +34,7 @@
 <!-- Begin page content -->
 <main class="flex-shrink-0">
   <div class="container mt-3">
-    <app-recent-movies></app-recent-movies>
-    <app-modern-carousel></app-modern-carousel>
-    <app-modern-carousel></app-modern-carousel>
+    <router-outlet></router-outlet>
   </div>
 </main>
 
