--- a/src/app/features/movies/recent-movies/recent-movies.component.html
+++ b/src/app/features/movies/recent-movies/recent-movies.component.html
@@ -13,6 +13,7 @@
       [ngClass]="pos == 0 ? 'carousel-item active': 'carousel-item'" data-bs-interval="5000">
       <img [src]="movie.url" class="d-block w-100" style="height: 450px" [alt]="movie.name">
       <div class="carousel-caption d-none d-md-block">
+        <a class="btn btnSuccess" [routerLink]="['detail', movie.id]">Ver detalle</a>
         <h5>{{ movie.name }}</h5>
         <p>{{ movie.description }}</p>
       </div>
